<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/cnt_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/common_padding_xlarge_16dp"
                android:layout_marginRight="@dimen/common_padding_xlarge_16dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_input_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_screen__hint_login"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pass_input_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_screen__password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_large_12dp"
                    android:text="@string/login_screen__btn_caption" />

            </LinearLayout>

            <com.theappsolutions.boilerplate.customviews.CustomFontTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/cnt_main"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/common_padding_xlarge_16dp"
                android:text="@string/app_name"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_xlarge_24sp"
                app:customFontName="ClanOT_NarrBook" />
        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
