<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/common_empty_view" />

            <com.theappsolutions.boilerplate.customviews.RecyclerViewWithEmptyMode
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>